Updated the final files

--- a/config/website-vectara/config.yaml
+++ b/config/website-vectara/config.yaml
@@ -1,7 +1,7 @@
 corpus_id: 2
-customer_id: 1169579801
+customer_id: 2949975112
 
-search_title: "Vectara website search"
+search_title: "Ask Paul Graham"
 
 enable_source_filters: False
 source: ""
